--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.9.3",
+    "workbox-webpack-plugin": "^7.3.0",
+    "workbox-window": "^7.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
